--- a/src/app/ideation/components/add-idea/add-idea.component.html
+++ b/src/app/ideation/components/add-idea/add-idea.component.html
@@ -72,6 +72,7 @@
         </button>
       </div>
     </div>
+
     <form
       id="idea_form"
       [attr.disabled]="!loggedIn()"
@@ -140,6 +141,128 @@
           ></span>
         </label>
       </cos-input>
+
+      <div *ngIf="ideation.allowAnonymous" class="anonymous_info">
+        <cos-input
+          placeholder="{{
+            'VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_AGE' | translate
+          }}"
+        >
+          <input
+            id="demographics_age"
+            name="demographics_age"
+            formControlName="demographics_age"
+            autocomplete="off"
+            placeholder="{{
+              'VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_AGE' | translate
+            }}"
+            class="gray_borders"
+            [ngClass]="{
+              error_input:
+                ideaForm.controls['demographics_age'].errors &&
+                ideaForm.controls['demographics_age'].errors['required'] &&
+                ideaForm.controls['demographics_age'].touched
+            }"
+            type="number"
+            required
+            min="0"
+          />
+
+          <label
+            for="demographics_age"
+            class="error_label"
+            *ngIf="
+              ideaForm.controls['demographics_age'].errors &&
+              ideaForm.controls['demographics_age'].errors['required'] &&
+              ideaForm.controls['demographics_age'].touched
+            "
+          >
+            <span
+              class="error_text"
+              translate="COMPONENTS.ADD_IDEA.FIELD_IS_MANDATORY"
+            ></span>
+          </label>
+        </cos-input>
+
+        <cos-input
+          placeholder="{{
+            'VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_GENDER' | translate
+          }}"
+        >
+          <input
+            id="demographics_gender"
+            name="demographics_gender"
+            formControlName="demographics_gender"
+            autocomplete="off"
+            placeholder="{{
+              'VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_GENDER' | translate
+            }}"
+            class="gray_borders"
+            [ngClass]="{
+              error_input:
+                ideaForm.controls['demographics_gender'].errors &&
+                ideaForm.controls['demographics_gender'].errors['required'] &&
+                ideaForm.controls['demographics_gender'].touched
+            }"
+            required
+          />
+          <label
+            for="demographics_gender"
+            class="error_label"
+            *ngIf="
+              ideaForm.controls['demographics_gender'].errors &&
+              ideaForm.controls['demographics_gender'].errors['required'] &&
+              ideaForm.controls['demographics_gender'].touched
+            "
+          >
+            <span
+              class="error_text"
+              translate="COMPONENTS.ADD_IDEA.FIELD_IS_MANDATORY"
+            ></span>
+          </label>
+        </cos-input>
+
+        <cos-input
+          placeholder="{{
+            'VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_RESIDENCE' | translate
+          }}"
+        >
+          <input
+            id="demographics_residence"
+            name="demographics_residence"
+            formControlName="demographics_residence"
+            autocomplete="off"
+            placeholder="{{
+              'VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_RESIDENCE' | translate
+            }}"
+            class="gray_borders"
+            [ngClass]="{
+              error_input:
+                ideaForm.controls['demographics_residence'].errors &&
+                ideaForm.controls['demographics_residence'].errors[
+                  'required'
+                ] &&
+                ideaForm.controls['demographics_residence'].touched
+            }"
+            required
+          />
+          <label
+            for="demographics_residence"
+            class="error_label"
+            *ngIf="
+              ideaForm.controls['demographics_residence'].errors &&
+              ideaForm.controls['demographics_residence'].errors['required'] &&
+              ideaForm.controls['demographics_residence'].touched
+            "
+          >
+            <span
+              class="error_text"
+              translate="COMPONENTS.ADD_IDEA.FIELD_IS_MANDATORY"
+            ></span>
+          </label>
+        </cos-input>
+      </div>
+
       <textarea
         cosmarkdown
         name="description"
@@ -160,6 +283,7 @@
         [limit]="ideaMaxLength()"
         required
       ></textarea>
+
       <label
         for="description"
         class="error_label"
