--- a/src/app/ideation/components/ideation-create/ideation-create.component.html
+++ b/src/app/ideation/components/ideation-create/ideation-create.component.html
@@ -1033,9 +1033,14 @@
                   <div class="mobile_hidden" translate="VIEWS.IDEATION_CREATE.SETTINGS_HEADING_ADVANCED_SETTINGS_DESC">
                   </div>
                 </div>
-                <div class="mobile_show" translate="VIEWS.IDEATION_CREATE.SETTINGS_HEADING_IDEATION_DEADLINE_DESC">
-                </div>
-                <div class="radio_wrap ideation" [ngClass]="{
+                <div
+                  class="mobile_show"
+                  translate="VIEWS.IDEATION_CREATE.SETTINGS_HEADING_IDEATION_DEADLINE_DESC"
+                ></div>
+
+                <div
+                  class="radio_wrap anonymous_area ideation"
+                  [ngClass]="{
                     disabled:
                       !isnew &&
                       topic.status !== this.TopicService.STATUSES.draft
@@ -1056,8 +1061,50 @@
                       <span translate="VIEWS.IDEATION_CREATE.LBL_ALLOW_ANONYMOUS_DESC"></span>
                     </div>
                   </div>
+
+                  <div
+                    class="anonymous_area_wrap"
+                    [ngClass]="ideation.allowAnonymous ? '' : 'hidden'"
+                  >
+                    <label class="checkbox">
+                      <span
+                        [innerHTML]="
+                          'VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_AGE'
+                            | translate
+                        "
+                      ></span>
+                      <input type="checkbox" name="orderBy" />
+                      <span class="checkmark"></span>
+                    </label>
+
+                    <label class="checkbox">
+                      <span
+                        [innerHTML]="
+                          'VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_GENDER'
+                            | translate
+                        "
+                      ></span>
+                      <input type="checkbox" name="orderBy" />
+                      <span class="checkmark"></span>
+                    </label>
+
+                    <label class="checkbox">
+                      <span
+                        [innerHTML]="
+                          'VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_RESIDENCE'
+                            | translate
+                        "
+                      ></span>
+                      <input type="checkbox" name="orderBy" />
+                      <span class="checkmark"></span>
+                    </label>
+                  </div>
                 </div>
-                <div class="radio_wrap ideation" [ngClass]="{ disabled: ideation.allowAnonymous }">
+
+                <div
+                  class="radio_wrap ideation"
+                  [ngClass]="{ disabled: ideation.allowAnonymous }"
+                >
                   <div class="radio_text_wrap">
                     <div class="radio_lable_wrap setting_toggle">
                       <span class="bold" translate="VIEWS.IDEATION_CREATE.LBL_DISABLE_REPLIES" [translateParams]="{
@@ -1074,6 +1121,7 @@
                     </div>
                   </div>
                 </div>
+
                 <div class="radio_wrap template_area ideation">
                   <div class="radio_text_wrap">
                     <div class="radio_lable_wrap setting_toggle">
