add demograpfic fields ui

--- a/src/app/ideation/components/ideation-create/ideation-create.component.html
+++ b/src/app/ideation/components/ideation-create/ideation-create.component.html
@@ -1771,8 +1771,9 @@
                   class="mobile_show"
                   translate="VIEWS.IDEATION_CREATE.SETTINGS_HEADING_IDEATION_DEADLINE_DESC"
                 ></div>
+
                 <div
-                  class="radio_wrap ideation"
+                  class="radio_wrap anonymous_area ideation"
                   [ngClass]="{
                     disabled:
                       !isnew &&
@@ -1804,7 +1805,46 @@
                       ></span>
                     </div>
                   </div>
+
+                  <div
+                    class="anonymous_area_wrap"
+                    [ngClass]="ideation.allowAnonymous ? '' : 'hidden'"
+                  >
+                    <label class="checkbox">
+                      <span
+                        [innerHTML]="
+                          'VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_AGE'
+                            | translate
+                        "
+                      ></span>
+                      <input type="checkbox" name="orderBy" />
+                      <span class="checkmark"></span>
+                    </label>
+
+                    <label class="checkbox">
+                      <span
+                        [innerHTML]="
+                          'VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_GENDER'
+                            | translate
+                        "
+                      ></span>
+                      <input type="checkbox" name="orderBy" />
+                      <span class="checkmark"></span>
+                    </label>
+
+                    <label class="checkbox">
+                      <span
+                        [innerHTML]="
+                          'VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_RESIDENCE'
+                            | translate
+                        "
+                      ></span>
+                      <input type="checkbox" name="orderBy" />
+                      <span class="checkmark"></span>
+                    </label>
+                  </div>
                 </div>
+
                 <div
                   class="radio_wrap ideation"
                   [ngClass]="{ disabled: ideation.allowAnonymous }"
@@ -1833,6 +1873,7 @@
                     </div>
                   </div>
                 </div>
+
                 <div class="radio_wrap template_area ideation">
                   <div class="radio_text_wrap">
                     <div class="radio_lable_wrap setting_toggle">
