--- a/src/app/ideation/components/add-idea/add-idea.component.html
+++ b/src/app/ideation/components/add-idea/add-idea.component.html
@@ -149,7 +149,7 @@
         <cos-input
           *ngFor="let key of getDemographicKeys()"
           placeholder="{{
-            'VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_AGE' | translate
+            'VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_' + key | uppercase | translate
           }}"
         >
           <input
