--- a/src/app/group/group.component.html
+++ b/src/app/group/group.component.html
@@ -24,7 +24,7 @@
       </ng-container>
     </div>
     <div id="buttons_area">
-      <button id="join_button" *ngIf="!group.userLevel && (auth.loggedIn$ | async)" class="btn_medium_close"
+      <button id="join_button" *ngIf="!group.userLevel" class="btn_medium_close"
         translate="VIEWS.GROUP.BTN_JOIN" (click)="joinGroup(group)"></button>
       <div *ngIf="(group.userLevel)" class="permissions_lable tablet_hidden"
         [translate]="(group.userLevel !== 'read')? ('TXT_GROUP_LEVELS_' + group.userLevel | uppercase) : 'VIEWS.GROUP.LBL_JOINED'">
