--- a/src/app/shared/components/invitation-dialog/invitation-dialog.component.scss
+++ b/src/app/shared/components/invitation-dialog/invitation-dialog.component.scss
@@ -20,7 +20,8 @@
 
 .content_image {
   width: 100%;
-  height: auto;
+  max-height: 260px;
+  aspect-ratio: 1;
   object-fit: cover;
 
   &.group {
