--- a/src/app/group/components/group-share/group-share.component.html
+++ b/src/app/group/components/group-share/group-share.component.html
@@ -66,7 +66,7 @@
   <div *ngIf="!showQR" translate="COMPONENTS.GROUP_SHARE.GENERATE_QR_CODE_DESCRIPTION"></div>
   <div translate="COMPONENTS.GROUP_SHARE.GENERATE_QR_CODE_PRINT"></div>
   <div class="qr_code" *ngIf="showQR">
-    <qrcode [qrdata]="joinUrl || ''" [width]="120" [version]="5" [errorCorrectionLevel]="'L'"></qrcode>
+    <qrcode [qrdata]="joinUrl || ''" [width]="120" [version]="5" [errorCorrectionLevel]="'L'" elementType="img"></qrcode>
   </div>
   <div *ngIf="!showQR">
     <button class="btn_medium_secondary bold" (click)="showQR = true"
