--- a/src/app/topic/components/topic-share/topic-share.component.html
+++ b/src/app/topic/components/topic-share/topic-share.component.html
@@ -65,7 +65,7 @@
   <div *ngIf="!showQR" translate="COMPONENTS.TOPIC_SHARE.GENERATE_QR_CODE_DESCRIPTION"></div>
   <div translate="COMPONENTS.TOPIC_SHARE.GENERATE_QR_CODE_PRINT"></div>
   <div class="qr_code" *ngIf="showQR">
-    <qrcode [qrdata]="joinUrl || ''" [width]="120" [version]="4" [errorCorrectionLevel]="'L'"></qrcode>
+    <qrcode [qrdata]="joinUrl || ''" [width]="120" [version]="4" [errorCorrectionLevel]="'L'" elementType="img"></qrcode>
   </div>
   <div *ngIf="!showQR">
     <button class="btn_medium_secondary bold" (click)="showQR = true"
