--- a/src/app/ideation/components/close-without-saving-dialog/close-without-saving-dialog.component.html
+++ b/src/app/ideation/components/close-without-saving-dialog/close-without-saving-dialog.component.html
@@ -51,10 +51,10 @@
       <div class="button_wrap">
         <button
           class="btn_big_submit"
-          translate="VIEWS.IDEATION_CREATE.KEEP_EDITING"
+          translate="MODALS.TOPIC_IDEA_CLOSE_WITHOUT_SAVING_BACK"
           [dialog-close]="true"
         ></button>
-        <a dialog-close translate="BTN_CLOSE"></a>
+        <a dialog-close translate="MODALS.TOPIC_IDEA_CLOSE_WITHOUT_SAVING_CLOSE"></a>
       </div>
     </div>
   </div>
