--- a/src/app/shared/components/invitation-dialog/invitation-dialog.component.html
+++ b/src/app/shared/components/invitation-dialog/invitation-dialog.component.html
@@ -411,11 +411,11 @@
             fill="#F190B7"
           />
         </svg>
-        <span>New to Citizen OS? </span>
+        <span translate="MODALS.GROUP_INVITE_NEW_TO_CITIZEN_OS"></span>
       </div>
 
       <a class="line_wrapper" href="https://citizenos.com" target="_blank">
-        <span translate="VIEWS.DASHBOARD.MY_TOPICS_LNK_VIEW_ALL"></span>
+        <span translate="MODALS.GROUP_INVITE_READ_MORE" class="bold"></span>
 
         <svg
           width="16"
