--- a/src/app/ideation/components/idea/idea-dialog.component.scss
+++ b/src/app/ideation/components/idea/idea-dialog.component.scss
@@ -325,12 +325,19 @@
   flex-direction: column;
   height: 100%;
   gap: 16px;
+
   .statement {
     color: var(--color-text);
     font-size: 16px;
     font-style: normal;
     font-weight: 600;
     line-height: 24px;
+  }
+
+  ::ng-deep .description {
+    P {
+      white-space: pre-line;
+    }
   }
 }
 
