--- a/src/app/ideation/components/add-idea/add-idea.component.html
+++ b/src/app/ideation/components/add-idea/add-idea.component.html
@@ -219,7 +219,7 @@
           ></span>
         </label>
       </div>
-      <ng-container *ngIf="images.length">
+      <ng-container *ngIf="newImages.length">
         <div class="idea_images_wrap">
           <div class="image" *ngFor="let image of newImages; index as index">
             <div class="image_data">
