add municipality dropdown

--- a/src/app/ideation/components/add-idea/add-idea.component.scss
+++ b/src/app/ideation/components/add-idea/add-idea.component.scss
@@ -232,6 +232,21 @@
   cos-input {
     min-width: 0;
     flex-grow: 1;
+    width: 100%;
+  }
+
+  .dropdown {
+    .options {
+      max-height: 200px;
+    }
+
+    .selection {
+      padding: 18px 16px 4px 16px;
+    }
+
+    .error_input {
+      border-color: var(--color-error);
+    }
   }
 
   @include mixins.mobile {
