--- a/src/app/account/components/register/register-dialog.component.html
+++ b/src/app/account/components/register/register-dialog.component.html
@@ -22,7 +22,7 @@
       </div>
     </div>
     <div class="dialog_content no_footer">
-      <register-form [redirectSuccess]="redirectSuccess" [email]="email"></register-form>
+      <register-form [redirectSuccess]="redirectSuccess" [email]="email" [inviteId]="inviteId"></register-form>
     </div>
     <div class="dialog_footer">
     </div>
